# rvasec2025llm4h

./: README.md  pyproject.toml
slides/: _quarto.yml  index.qmd  style.css
slides/assets/: rvasec2025.bib
src/: exploitdb.py  guidance_tools.py  guidance_web_search.py  poision_pretrain_data.py  pretrain_gpt2.py  prompts.py  smolagents_better_search.py  smolagents_shared.py  smolagents_sploit_assistant.py  smolagents_vuln_mcp.py  smolagents_vuln_mcp_client.py  weight_table.py  wikipedia_search.py
tapes/: better_bar_search.tape  rvasec_travel_plan.tape  rvasec_websearch.tape  rvasec_websearch_struct.tape  smolagent_exploit_assistant.tape  smolagent_exploit_assistant_struct.tape
